Fix for bug #9344 INFORMATION_SCHEMA, wrong content, numeric columns   The columns CHARACTER_MAXIMUM_LENGTH and CHARACTER_OCTET_LENGTH   of INFORMATION_SCHEMA.COLUMNS must be NULL for numeric columns

mysql-test/r/information_schema.result:
  Fix for bug #9344 INFORMATION_SCHEMA, wrong content, numeric columns
mysql-test/t/information_schema.test:
  Fix for bug #9344 INFORMATION_SCHEMA, wrong content, numeric columns
sql/sql_show.cc:
  Fix for bug #9344 INFORMATION_SCHEMA, wrong content, numeric columns
BitKeeper/etc/logging_ok:
  Logging to logging@openlogging.org accepted